Added google analytics tracking

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -55,5 +55,6 @@
     <a href="#" id="scroll" style="display: none;">
         <span></span>
     </a>
-
+    
+    {% include analytics.html %}
 </head>
